[gd_scene load_steps=3 format=3 uid="uid://ch1m5lt2jqoh7"]

[ext_resource type="Script" path="res://main.gd" id="1_y5ilt"]
[ext_resource type="Theme" uid="uid://nc8k1xgl7ogv" path="res://resources/themes/buttons.tres" id="2_1ag82"]

[node name="Main" type="Node2D"]
script = ExtResource("1_y5ilt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="Control" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="CelAuto01" type="Button" parent="CanvasLayer/MarginContainer/Menu"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -120.0
offset_right = 85.5
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Generate map using cellular automata."
theme = ExtResource("2_1ag82")
text = "Cellular Automata"

[node name="InfBiomes" type="Button" parent="CanvasLayer/MarginContainer/Menu"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = -54.0
offset_right = 178.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Generate map using cellular automata."
theme = ExtResource("2_1ag82")
text = "Noise Biomes"

[node name="WorldGen" type="Button" parent="CanvasLayer/MarginContainer/Menu"]
layout_mode = 0
offset_left = 838.0
offset_top = 566.0
offset_right = 1094.0
offset_bottom = 636.0
theme = ExtResource("2_1ag82")
text = "World Gen"

[node name="DungeonGen" type="Button" parent="CanvasLayer/MarginContainer/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -194.0
offset_top = 113.0
offset_right = 194.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_1ag82")
text = "Dungeon Generator"

[node name="IslandGen" type="Button" parent="CanvasLayer/MarginContainer/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = 201.5
offset_right = 165.0
offset_bottom = 264.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_1ag82")
text = "Island Generator"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Control" type="Control" parent="CanvasLayer/MarginContainer2"]
layout_mode = 2

[node name="Back" type="Button" parent="CanvasLayer/MarginContainer2/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -5.0
offset_top = 38.0
offset_right = 75.0
offset_bottom = 101.0
grow_horizontal = 0
tooltip_text = "Return to main menu > Exit Application."
theme = ExtResource("2_1ag82")
text = "exit"

[connection signal="pressed" from="CanvasLayer/MarginContainer/Menu/CelAuto01" to="." method="_on_cel_auto_01_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Menu/InfBiomes" to="." method="_on_inf_biomes_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Menu/WorldGen" to="." method="_on_world_gen_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Menu/DungeonGen" to="." method="_on_dungeon_gen_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Menu/IslandGen" to="." method="_on_island_gen_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer2/Control/Back" to="." method="_on_back_pressed"]
